--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8">
+  <title>m-ural.ru</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="header">
+    <div class="logo"></div>
+    <ul class="navigation">
+        <li><a href="#">Мероприятия</a></li>
+        <li><a href="#">Трансляции</a></li>
+        <li><a href="#">Публикации</a></li>
+        <li><a href="#">Маркетолог</a></li>
+    </ul>
 
+    <button id="registration">Регистрация</button>
+    <button id="SignIn">Вход</button>
+  </header>
+  
+</body>
+</html>
